<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Divisor Calculator</string>
    <string name="str_cal">Click on the calculation icon above\nand start calculating the divisor!</string>

    <string name="app_ver">App Version</string>
    <string name="app_info">App Information</string>
    <string name="app_info_text">The &quot;Divisor Calculator&quot; application project is a project of &quot;akoiapp&quot; and has all rights.\nAll content and features are protected by the copyrighted work of akoiapp and may be legally punished for unauthorized distribution and modification.\n\nCopyright 2017 akoiapp. All rights reserved.</string>

    <string name="contact">Contact</string>

    <string name="developer">Developer</string>
    <string name="developer_text_age">Hello! I&apos;m high school student in south korea and develop android apps.</string>
    <string name="developer_text_age_after">Hello! I&apos;m acckolee and develop android apps in akoiapp.</string>
    <string name="developer_text_dev">I will create an application that thinks necessary in our daily life.</string>
    <string name="developer_text_more">For details, please visit the following site!</string>

    <string name="blog"><u>Blog</u></string>
    <string name="googleplus"><u>Google+</u></string>
    <string name="twitter"><u>Twitter</u></string>
    <string name="github"><u>Github</u></string>

    <string name="remove_ads">Remove Ads</string>
    <string name="remove_ads_text">Watch your video ads to get rid of your ads!</string>
    <string name="number_ads">Number of ads engagement : </string>

    <string name="ads_participation">Thank you for your participation.</string>
    <string name="ads_load_fail">Failed to load ads.</string>

    <string name="result"></string>

    <string name="osp">Open Source Project</string>
    <string name="osp_text">Divisor calculator is an open source project.</string>

</resources>