<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingBottom="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/textDev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fontFamily="@font/bmjua"
        android:text=""
        android:textColor="@color/gray_text_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textDev"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/blog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bmjua"
            android:paddingRight="8dp"
            android:text="@string/blog"
            android:textAppearance="?android:attr/textAppearanceButton"
            android:textColor="@color/gray_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/googleplus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bmjua"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/googleplus"
            android:textAppearance="?android:attr/textAppearanceButton"
            android:textColor="@color/gray_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bmjua"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/twitter"
            android:textAppearance="?android:attr/textAppearanceButton"
            android:textColor="@color/gray_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bmjua"
            android:paddingLeft="8dp"
            android:text="@string/github"
            android:textAppearance="?android:attr/textAppearanceButton"
            android:textColor="@color/gray_text_color"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>